--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - name: Install node v14
+        uses: actions/setup-node@v2
+      - name: Install eslint
+        run: npm install eslint
+      - name: Run ES linting
+        run: npm run lint
