--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,24 @@ jobs:
         uses: actions/checkout@v2
       - name: Install node v14
         uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - name: Install eslint
         run: npm install eslint
       - name: Run ES linting
         run: npm run lint
+  unit-tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Use node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+      - name: Install deps
+        run: npm install
+      - name: Run unit tests
+        run: npm test
